--- a/M1SpatialAudioPlayer.html
+++ b/M1SpatialAudioPlayer.html
@@ -51,7 +51,7 @@
               height: 100%;
               margin: 0px;
               overflow: hidden;
-              background-color: #f4f4f4;
+              background: yellow
             }
             * {
                 font-family: 'Roboto Mono', monospace;
