--- a/M1SpatialAudioPlayer.html
+++ b/M1SpatialAudioPlayer.html
@@ -51,7 +51,7 @@
               height: 100%;
               margin: 0px;
               overflow: hidden;
-              background: yellow
+              background: #538F47
             }
             * {
                 font-family: 'Roboto Mono', monospace;
@@ -349,7 +349,7 @@
     </head>
     <body>
         <div id="main" style="display:none;">
-            <div class="containerOuter" style="position:absolute; top:20px; left:30px;">
+            <div class="containerOuter" style="position:absolute; top:20px; left:30px;"  display="none">
               <div class="containerInner" style="min-height: 190px;">
                 
                 <input type="radio" name="mode" id="radio3" class="hidden" checked="checked" value="touch" onclick="selectTracker()" >
