--- a/M1SpatialAudioPlayer.html
+++ b/M1SpatialAudioPlayer.html
@@ -51,7 +51,12 @@
               height: 100%;
               margin: 0px;
               overflow: hidden;
-              background: #538F47
+              background: #538F47;
+              background-image: url("img/bg.svg");
+              background-position: center;
+              background-repeat: no-repeat;
+              background-size: cover;
+
             }
             * {
                 font-family: 'Roboto Mono', monospace;
