--- a/M1SpatialAudioPlayer.html
+++ b/M1SpatialAudioPlayer.html
@@ -51,11 +51,13 @@
               height: 100%;
               margin: 0px;
               overflow: hidden;
-              background: #538F47;
-              background-image: url("img/bg.svg");
+              /* background: #538F47; */
+              background: pink;
+
+              /* background-image: url("img/bg.svg");
               background-position: center;
               background-repeat: no-repeat;
-              background-size: cover;
+              background-size: cover; */
 
             }
             * {
