--- a/M1SpatialAudioPlayer.html
+++ b/M1SpatialAudioPlayer.html
@@ -51,8 +51,8 @@
               height: 100%;
               margin: 0px;
               overflow: hidden;
-              /* background: #538F47; */
-              background: pink;
+              background: #538F47;
+              /* background: pink; */
 
               /* background-image: url("img/bg.svg");
               background-position: center;
