--- a/M1SpatialAudioPlayer.html
+++ b/M1SpatialAudioPlayer.html
@@ -54,10 +54,10 @@
               background: #538F47;
               /* background: pink; */
 
-              /* background-image: url("img/bg.svg");
+              background-image: url("img/bg.svg");
               background-position: center;
               background-repeat: no-repeat;
-              background-size: cover; */
+              background-size: cover;
 
             }
             * {
