--- a/M1SpatialAudioPlayer.html
+++ b/M1SpatialAudioPlayer.html
@@ -68,6 +68,11 @@
                 display: inline-block;
                 vertical-align: top;
             }
+            .upper_text{
+              width:100%;
+              z-index:1000;
+            }
+
             .button {
                 background-color: #5C5C5C;
                 text-indent: 0;
@@ -429,6 +434,7 @@
                 <div id="modelview" class="canvas-wrapper" style="display:none;"></div>
             </div>
         </div>
+        <img class="upper_text" src="img/text_up.svg" alt="">
 
         <div id="stats" style="position:absolute;bottom:5px;left:5px;"></div>
         <div id="info" style="position:relative; margin:auto; margin-top:41vh; text-align:center; font-size:3em;"></div>
