change full screen

--- a/M1SpatialAudioPlayer.html
+++ b/M1SpatialAudioPlayer.html
@@ -71,6 +71,13 @@
             .upper_text{
               width:100%;
               z-index:1000;
+              position:fixed;
+              top:0;
+
+            }
+            #output{
+              width:100vw;
+              height:auto;
             }
 
             .button {
@@ -88,10 +95,11 @@
                 margin-bottom: 15px;
             }
             #camVideo_id{
-              position: absolute;
-              top: 50%;
+              position: fixed;
+              top: 0;
+              /* top: 50%;
               left: 50%;
-              transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%); */
               
             }
             .button:hover {
