--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
   </div>
   <div class="control-panel">
   </div>
+  <div class="upperText">
+    <img src="img/1-1.svg" alt="">
+    <img src="img/1-2.svg" alt="">
+    <img src="img/2.svg" alt="">
+
+  </div>
 <!-- partial -->
   <script type="module" src="./script.js"></script>
 
