--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
   <div class="control-panel">
   </div>
   <div class="upperText">
-    <img class="upperText" src="img/1-1.svg" alt="">
-    <img class="upperText" src="img/1-2.svg" alt="">
-    <img class="upperText" src="img/2.svg" alt="">
+    <img class="upperText" src="img/1.svg" alt="">
+    <img class="bottomText" src="img/2.svg" alt="">
 
   </div>
 <!-- partial -->
