only keep buttom

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="control-panel">
   </div>
   <div class="upperText">
-    <img class="upperText" src="img/1.svg" alt="">
+    <!-- <img class="upperText" src="img/1.svg" alt=""> -->
     <img class="bottomText" src="img/2.svg" alt="">
 
   </div>
